# RecipeServer

./: README.md  pyproject.toml
recipe_server/: recipe.py  recipe_storage_server.py
