[tool.poetry]
name = "recipe-server"
version = "0.1.0"
description = ""
authors = ["Tyler Kuipers <tkuipers123@gmail.com>"]
readme = "README.md"
packages = [{include = "recipe_server"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
fastapi = {extras = ["all"], version = "^0.85.0"}
recipe-scrapers = "^14.16.0"
SQLAlchemy = "^1.4.41"
SQLAlchemy-Utils = "^0.38.3"
mysqlclient = "2.1.0"
fastapi-utils = "^0.2.1"
psycopg2-binary = "^2.9.4"
orjson = "^3.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
